Fix file collapse UI regression
Increase specificity of .d2h-d-none selector

--- a/src/ui/css/diff2html.css
+++ b/src/ui/css/diff2html.css
@@ -5,10 +5,6 @@
  *
  */
 
-.d2h-d-none {
-  display: none;
-}
-
 .d2h-wrapper {
   text-align: left;
 }
@@ -105,6 +101,10 @@
 
 .d2h-file-diff {
   overflow-y: hidden;
+}
+
+.d2h-files-diff.d2h-d-none, .d2h-file-diff.d2h-d-none {
+  display: none;
 }
 
 .d2h-file-side-diff {
